# slog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile~  README.md  example  example.c  license.txt  slog.c  slog.cfg  slog.h
.github/workflows/: codeql.yml  linux.yml  macos.yml  make.yml  slogbuild.yml  tests.yml  windows.yml
example/: Makefile  check.sh  example.c  slog.cfg  tests.c
libslog/: Makefile  slog.c  slog.h
src/: Makefile  Makefile.darwin  slog.c  slog.h
